--- a/kinms_fitter/docs/KinMS_fitter_tutorial.ipynb
+++ b/kinms_fitter/docs/KinMS_fitter_tutorial.ipynb
@@ -1021,6 +1021,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Inclination and Position Angle Warps\n",
+    "\n",
+    "A similar system can also be used to fit position angle and/or inclination warps. To start, simply import the included warp functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kinms_fitter.warp_funcs import warp_funcs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have several options for functional forms for the warp profile - currently included are a linear change over some radial range (and flat after this), or a non-parametric fit where the PA/inc can be constrained at a user-specified set of radii, and are linear interpolated between these. You set these to be used by passing a list of required warp functions to `fit.inc_profile` or `fit.pa_profile` respectively. Here are some examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit.inc_profile=[warp_funcs.linear(guesses=[5,60,2],minimums=[-50,0,2],maximums=[50,90,2],fixed=[False,False,True],labels_prefix='inc')]\n",
+    "## fitting a function whole initial guesses have a gradient of 5 degrees/arcsec, an intercept of 60 degrees and that is flat beyond 2\" (fixed).\n",
+    "\n",
+    "\n",
+    "fit.pa_profile=[warp_funcs.tilted_rings(np.array([0,1,2]),guesses=[330,350,360],minimums=[0,0,0],maximums=[400,400,400],labels_prefix='pa')]\n",
+    "## fitting the PA non-parametrically, at 0, 1 and 2\", with initial guesses 3320, 350 and 360 degrees."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fitting with these velocity/surface brightness profiles"
    ]
   },
@@ -1035,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1287,7 +1326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
