--- a/kinms_fitter/docs/KinMS+skySampler.ipynb
+++ b/kinms_fitter/docs/KinMS+skySampler.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "Now you can run the code as normal, passing these cloudlets to `skySampClouds` and not inputing any surface brightness distribution!\n",
     "\n",
-    "*Note: I would recommend runn"
+    "*Note: I would NOT recommend running KinMS in a notebook like this for production code. Scripts are much more robust and reliable.*"
    ]
   },
   {
